package eapli.base.event.meeting.domain;

public enum MeetingParticipantStatus {
    ACCEPTED, REJECTED, PENDING
}
